--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ body{
     height: 40px;
     width: 40px;
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 .bomb {
     background-color: orange;
+}
+.checked {
+    background-color: green;
 }
